--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    environment: production
     steps:
       - uses: lowlighter/metrics@master
         with:
@@ -56,6 +57,7 @@ jobs:
       runs-on: ubuntu-latest
       permissions:
         contents: write
+      environment: production
       steps:
         - uses: lowlighter/metrics@master
           with:
