--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,7 +29,7 @@ jobs:
           filename: left.svg
           user: littlebutt
           template: classic
-          base: header, activity, community, repositories
+          base: header, activity, repositories
           config_timezone: Asia/Shanghai
           plugin_followup: yes
           plugin_followup_archived: yes
