--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -44,7 +44,7 @@ jobs:
           plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
+          plugin_languages_recent_load: 100
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
           plugin_lines: yes
@@ -77,10 +77,8 @@ jobs:
             template: classic
             base: metadata
             config_timezone: Asia/Shanghai
-            plugin_achievements: yes
-            plugin_achievements_display: detailed
-            plugin_achievements_secrets: yes
-            plugin_achievements_threshold: C
+            plugin_topics: yes
+            plugin_topics_mode: icons
             plugin_activity: yes
             plugin_activity_days: 14
             plugin_activity_filter: all
