--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -85,3 +85,6 @@ jobs:
             plugin_activity_limit: 6
             plugin_activity_load: 300
             plugin_activity_visibility: all
+            plugin_habits: yes
+            plugin_habits_facts: yes
+            plugin_habits_charts: yes
